# XZ

./: .gitignore  README.md  liblzma.def
source/: CMakeLists.txt  Exports.h  JdeZip.cpp  JdeZip.h  Makefile  XZ.cpp  XZ.h  XZ.sln  XZ.vcxproj  XZ.vcxproj._user  XZ.vcxproj.filters  dllmain.cpp  pc.h
